--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
 }
 
 #main {
-    height: 100%;
     width: 100%;
     position: relative;
     padding: 0.1px;
@@ -521,15 +520,28 @@ body {
 }
 
 #footer {
-    background-color: red;
+    width: 100%;
+    height: 20vh;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
     display: flex;
     justify-content: space-evenly;
-    padding: 2vw;
-
+    align-items: center;
+    margin-bottom: 2vw;
 }
 
-#footer>h5 {
+#footer h5 {
+    height: 100%;
+    width: 25%;
     border-right: 2px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5vw;
+    font-weight: 350;
+}
+
+#footer h5:nth-last-child(1) {
+    border-right: none;
+    width: 35%;
 }
